# api-benchmarks

./: README.md  Rakefile
elixir-phoenix/: README.md  mix.exs  run.sh
elixir-phoenix/config/: config.exs  dev.exs  prod.exs  test.exs
elixir-phoenix/lib/: elixir_phoenix.ex
elixir-phoenix/lib/elixir_phoenix/: supervisor.ex
elixir-phoenix/test/: elixir_phoenix_test.exs
elixir-phoenix/web/: i18n.ex  router.ex  views.ex
elixir-phoenix/web/controllers/: page_controller.ex  ping_controller.ex
elixir-phoenix/web/views/: layout_view.ex  page_view.ex  ping_view.ex
go/: README.md  app.go
haskell/: Main.hs  README.md  app.cabal  run.sh
node-express/: README.md  app.js  package.json
ruby-sinatra/: Gemfile  README.md  app.rb  run.sh
